; ModuleID = '/home/carl/AnghaBench/libevent/extr_http.c_evhttp_add_server_alias.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_http.c_evhttp_add_server_alias.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evhttp = type { i32 }
%struct.evhttp_server_alias = type { i32 }

@next = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evhttp_add_server_alias(%struct.evhttp* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.evhttp*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.evhttp_server_alias*, align 8
  store %struct.evhttp* %0, %struct.evhttp** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = call %struct.evhttp_server_alias* @mm_calloc(i32 1, i32 4)
  store %struct.evhttp_server_alias* %7, %struct.evhttp_server_alias** %6, align 8
  %8 = load %struct.evhttp_server_alias*, %struct.evhttp_server_alias** %6, align 8
  %9 = icmp ne %struct.evhttp_server_alias* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %29

11:                                               ; preds = %2
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @mm_strdup(i8* %12)
  %14 = load %struct.evhttp_server_alias*, %struct.evhttp_server_alias** %6, align 8
  %15 = getelementptr inbounds %struct.evhttp_server_alias, %struct.evhttp_server_alias* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load %struct.evhttp_server_alias*, %struct.evhttp_server_alias** %6, align 8
  %17 = getelementptr inbounds %struct.evhttp_server_alias, %struct.evhttp_server_alias* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %11
  %21 = load %struct.evhttp_server_alias*, %struct.evhttp_server_alias** %6, align 8
  %22 = call i32 @mm_free(%struct.evhttp_server_alias* %21)
  store i32 -1, i32* %3, align 4
  br label %29

23:                                               ; preds = %11
  %24 = load %struct.evhttp*, %struct.evhttp** %4, align 8
  %25 = getelementptr inbounds %struct.evhttp, %struct.evhttp* %24, i32 0, i32 0
  %26 = load %struct.evhttp_server_alias*, %struct.evhttp_server_alias** %6, align 8
  %27 = load i32, i32* @next, align 4
  %28 = call i32 @TAILQ_INSERT_TAIL(i32* %25, %struct.evhttp_server_alias* %26, i32 %27)
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %23, %20, %10
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local %struct.evhttp_server_alias* @mm_calloc(i32, i32) #1

declare dso_local i32 @mm_strdup(i8*) #1

declare dso_local i32 @mm_free(%struct.evhttp_server_alias*) #1

declare dso_local i32 @TAILQ_INSERT_TAIL(i32*, %struct.evhttp_server_alias*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
